updated service and project manager
updated updateMemberRequestInput and update member request service to allow update for role.
added memberRequests to update and delete obj of the project manager and their corresponding methods for update and delete.
updated accept application page to go back to the previous page if there is one
